--- a/code/python/model-train.ipynb
+++ b/code/python/model-train.ipynb
@@ -160,7 +160,7 @@
         "# Puts model into a dictionary\n",
         "\n",
         "models = {\"Logistic Regression\": LogisticRegression(),\n",
-        "          \"KNN\":KNeighborsClassifier(),\n",
+        "          \"KNN\":KNeighborsClassifier(n_neighbors=5),\n",
         "          \"Random Forest\":RandomForestClassifier()}\n",
         "\n",
         "# Create a function to fit and score models\n",
