--- a/code/python/model-train.ipynb
+++ b/code/python/model-train.ipynb
@@ -75,7 +75,7 @@
       ],
       "source": [
         "\n",
-        "df = pd.read_csv(\"data.csv\")\n",
+        "df = pd.read_csv(\"../../data.csv\")\n",
         "print(\"=x\"*40)\n",
         "print(\"\\n\\n\\n\")\n",
         "print(f\"Soil Liquifaction Data :\\n\\t\\t{df.shape[0]} Number of Rows \\n\\t\\t&\\n\\t\\t{df.shape[1]} Number of Columns\")\n",
@@ -1087,13 +1087,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 81,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3rcwVwWUbPwr",
-        "outputId": "bf308a53-5426-42af-9ec9-2a8bca4188b6"
+        "outputId": "c3593b8a-42b7-46e2-9105-9d4601817603"
       },
       "outputs": [
         {
@@ -1106,9 +1106,9 @@
       ],
       "source": [
         "# Save the model\n",
-        "model_filename = 'model.pkl'\n",
+        "model_filename = '../../model.pkl'\n",
         "with open(model_filename, 'wb') as file:\n",
-        "    pickle.dump(knn, file)\n",
+        "    pickle.dump(rs_rf, file)\n",
         "print('Model Saved Succesfully!')"
       ]
     }
