--- a/code/python/model-train.ipynb
+++ b/code/python/model-train.ipynb
@@ -1108,7 +1108,7 @@
         "# Save the model\n",
         "model_filename = '../../model/model.pkl'\n",
         "with open(model_filename, 'wb') as file:\n",
-        "    pickle.dump(rs_rf, file)\n",
+        "    pickle.dump(knn, file)\n",
         "print('Model Saved Succesfully!')"
       ]
     }
