--- a/code/python/model-train.ipynb
+++ b/code/python/model-train.ipynb
@@ -86,7 +86,7 @@
       ],
       "source": [
         "\n",
-        "df = pd.read_csv(\"data.csv\")\n",
+        "df = pd.read_csv(\"../../data.csv\")\n",
         "print(\"=x\"*40)\n",
         "print(\"\\n\\n\\n\")\n",
         "print(f\"Soil Liquifaction Data :\\n\\t\\t{df.shape[0]} Number of Rows \\n\\t\\t&\\n\\t\\t{df.shape[1]} Number of Columns\")\n",
@@ -1130,7 +1130,7 @@
       ],
       "source": [
         "# Save the model\n",
-        "model_filename = 'models.pkl'\n",
+        "model_filename = '../../model/model.pkl'\n",
         "with open(model_filename, 'wb') as file:\n",
         "    pickle.dump(xgb, file)\n",
         "print('Model Saved Succesfully!')"
