--- a/code/python/model-train.ipynb
+++ b/code/python/model-train.ipynb
@@ -11,6 +11,31 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "pip install xgboost"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jj-AQx882Hsz",
+        "outputId": "d5830827-5257-48fd-aac8-29209976383c"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: xgboost in /usr/local/lib/python3.10/dist-packages (2.0.3)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from xgboost) (1.25.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from xgboost) (1.11.4)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {
         "id": "owoqt4sjbPwY"
