--- a/code/python/model-train.ipynb
+++ b/code/python/model-train.ipynb
@@ -1187,30 +1187,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3rcwVwWUbPwr",
-        "outputId": "b6e70cb3-4f7b-4e0d-b086-eb40eabea6a7"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model Saved Succesfully!\n"
-          ]
-        }
-      ],
       "source": [
-        "# Save the model\n",
-        "model_filename = '../../model/model.pkl'\n",
-        "with open(model_filename, 'wb') as file:\n",
-        "    pickle.dump(rs_xgb, file)\n",
-        "print('Model Saved Succesfully!')"
-      ]
+        "best_xgb_model_filename = '../../modelbest_xgb_model.json'\n",
+        "rs_xgb.best_estimator_.save_model(best_xgb_model_filename)"
+      ],
+      "metadata": {
+        "id": "mckemPsh3fWz"
+      },
+      "execution_count": 45,
+      "outputs": []
     }
   ],
   "metadata": {
